--- a/index.html
+++ b/index.html
@@ -791,43 +791,24 @@
             <div class="reasons-grid">
                 <div class="reason-card">
                     <div class="reason-number">1️⃣</div>
-                    <div class="reason-text">Ton sourire illumine ma journée comme le soleil illumine le monde ☀️</div>
+                    <div Omreyyy nta klch fi hyati nhari yfot mal ki mtkonch fih mais ghir mnchouf lmsj t3k nfrh denya endy thbs g3e, nta howa she endy nhbek bzf ☀️</div>
                 </div>
                 <div class="reason-card">
                     <div class="reason-number">2️⃣</div>
-                    <div class="reason-text">Tu me fais rire même dans les moments les plus difficiles 😄</div>
+                    <div class="reason-text">Abdelillah wlh nta bnadem 3ziz eliya bzf w9rib liya hta mn waldiya, wlh n3che9 fik mknch li ystahl lhob 9dk j'espère tjrs nkono kifkif , merci beaucoup ela kl hja drtha ela jali nmout elik 💖</div>
                 </div>
                 <div class="reason-card">
                     <div class="reason-number">3️⃣</div>
-                    <div class="reason-text">Ta gentillesse et ton cœur généreux me touchent chaque jour 💗</div>
+                    <div class="reason-text">Hobbi ki tfr7 nfr7 ana tan wki tkn cv pas hta ana nkon mchy mliha, malgré denya fiha swalh chabine wswalh 3yanin mais ghdy nsyi de ma part nkon mra li mtndmch li rak m3aha , smhli ela aye ghlta ghltha m3ak nw3dk mrhch tt3wd aye haja z3ftk mni, jtm ma vie reby y5lik liya 💗</div>
                 </div>
                 <div class="reason-card">
                     <div class="reason-number">4️⃣</div>
-                    <div class="reason-text">Tu me comprends comme personne d'autre ne le fait 🤝</div>
+                    <div class="reason-text">Ma vie elblk bli nta unique n9lhalk wn3awdlk chuis tellement contente par ce que endy nta , nchlh nb9a t3k wtb9a t3y à la mort.</div>
                 </div>
                 <div class="reason-card">
                     <div class="reason-number">5️⃣</div>
-                    <div class="reason-text">Avec toi, je me sens complète et heureuse 🌟</div>
-                </div>
-                <div class="reason-card">
-                    <div class="reason-number">6️⃣</div>
-                    <div class="reason-text">Tu es mon meilleur ami et mon plus grand amour 💑</div>
-                </div>
-                <div class="reason-card">
-                    <div class="reason-number">7️⃣</div>
-                    <div class="reason-text">Chaque moment avec toi est un cadeau précieux 🎁</div>
-                </div>
-                <div class="reason-card">
-                    <div class="reason-number">8️⃣</div>
-                    <div class="reason-text">Tu es l'homme de mes rêves devenu réalité ✨</div>
-                </div>
-                <div class="reason-card">
-                    <div class="reason-number">9️⃣</div>
-                    <div class="reason-text">Ta présence me donne la force d'affronter n'importe quoi 💪</div>
-                </div>
-                <div class="reason-card">
-                    <div class="reason-number">🔟</div>
-                    <div class="reason-text">Je t'aime simplement parce que tu es TOI, unique et parfait 💖</div>
+                    <div class="reason-text">
+Min cœur, c pas que des paroles mais wlh ma vie nhbek dymn nkon m3ak wlh jmen sens vrmnt  bien avec toi wntmnlk tjrs tkon bien wtwsl win rak hab wtfrh hta ana nfrhlk mv, wlh pour moi ni3ma thbi wahd wyhbk hamdoulhh ki reby b3tk liya.</div>
                 </div>
             </div>
         </section>
