--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
             <div class="reasons-grid">
                 <div class="reason-card">
                     <div class="reason-number">1️⃣</div>
-                    <div Omreyyy nta klch fi hyati nhari yfot mal ki mtkonch fih mais ghir mnchouf lmsj t3k nfrh denya endy thbs g3e, nta howa she endy nhbek bzf ☀️</div>
+                  /div><div class="reason-text"> Omreyyy nta klch fi hyati nhari yfot mal ki mtkonch fih mais ghir mnchouf lmsj t3k nfrh denya endy thbs g3e, nta howa she endy nhbek bzf ☀️</div>
                 </div>
                 <div class="reason-card">
                     <div class="reason-number">2️⃣</div>
