--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
             <div class="reasons-grid">
                 <div class="reason-card">
                     <div class="reason-number">1️⃣</div>
-                  /div><div class="reason-text"> Omreyyy nta klch fi hyati nhari yfot mal ki mtkonch fih mais ghir mnchouf lmsj t3k nfrh denya endy thbs g3e, nta howa she endy nhbek bzf ☀️</div>
+                  /div> Omreyyy nta klch fi hyati nhari yfot mal ki mtkonch fih mais ghir mnchouf lmsj t3k nfrh denya endy thbs g3e, nta howa she endy nhbek bzf💕☀️</div>
                 </div>
                 <div class="reason-card">
                     <div class="reason-number">2️⃣</div>
@@ -799,16 +799,16 @@
                 </div>
                 <div class="reason-card">
                     <div class="reason-number">3️⃣</div>
-                    <div class="reason-text">Hobbi ki tfr7 nfr7 ana tan wki tkn cv pas hta ana nkon mchy mliha, malgré denya fiha swalh chabine wswalh 3yanin mais ghdy nsyi de ma part nkon mra li mtndmch li rak m3aha , smhli ela aye ghlta ghltha m3ak nw3dk mrhch tt3wd aye haja z3ftk mni, jtm ma vie reby y5lik liya 💗</div>
+                    <div class="reason-text">Hobbi ki tfr7 nfr7 ana tan wki tkn cv pas hta ana nkon mchy mliha, malgré denya fiha swalh chabine wswalh 3yanin mais ghdy nsyi de ma part nkon mra li mtndmch li rak m3aha , smhli ela aye ghlta ghltha m3ak nw3dk mrhch tt3wd aye haja z3ftk mni, jtm ma vie reby y5lik liya💗</div>
                 </div>
                 <div class="reason-card">
                     <div class="reason-number">4️⃣</div>
-                    <div class="reason-text">Ma vie elblk bli nta unique n9lhalk wn3awdlk chuis tellement contente par ce que endy nta , nchlh nb9a t3k wtb9a t3y à la mort.</div>
+                    <div class="reason-text">Ma vie elblk bli nta unique n9lhalk wn3awdlk chuis tellement contente par ce que endy nta , nchlh nb9a t3k wtb9a t3y à la mort 💕💕💕.</div>
                 </div>
                 <div class="reason-card">
                     <div class="reason-number">5️⃣</div>
                     <div class="reason-text">
-Min cœur, c pas que des paroles mais wlh ma vie nhbek dymn nkon m3ak wlh jmen sens vrmnt  bien avec toi wntmnlk tjrs tkon bien wtwsl win rak hab wtfrh hta ana nfrhlk mv, wlh pour moi ni3ma thbi wahd wyhbk hamdoulhh ki reby b3tk liya.</div>
+Min cœur, c pas que des paroles mais wlh ma vie nhbek dymn nkon m3ak wlh jmen sens vrmnt  bien avec toi wntmnlk tjrs tkon bien wtwsl win rak hab wtfrh hta ana nfrhlk mv, wlh pour moi ni3ma thbi wahd wyhbk hamdoulhh ki reby b3tk liya💕💖.</div>
                 </div>
             </div>
         </section>
