--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
                 </div>
                 <div class="reason-card">
                     <div class="reason-number">5️⃣</div>
-                    <div class="reason-text">Min cœur, c pas que des paroles mais wlh ma vie nhbek dymn nkon m3ak 💕 wlh jmen sens vrmnt bien avec toi 😌 wntmnlk tjrs tkon bien wtwsl win rak hab wtfrh hta ana nfrhlk mv 🥰, wlh pour moi ni3ma thbi wahd wyhbk hamdoulhh ki reby b3tk liya 🙏💖.</div>
+                    <div class="reason-text">Min cœur, c pas que des paroles mais wlh ma vie nhbek wnhb dymn nkon m3ak 💕 wlh je me sens vrmnt bien avec toi 😌 wntmnlk tjrs tkon bien wtwsl win rak hab wtfrh hta ana nfrhlk mv 🥰, wlh pour moi ni3ma thbi wahd wyhbk hamdoulhh ki reby b3tk liya 🙏💖.</div>
                 </div>
             </div>
         </section>
