--- a/index.html
+++ b/index.html
@@ -730,7 +730,11 @@
             <div class="reasons-grid">
                 <div class="reason-card">
                     <div class="reason-number">1️⃣</div>
-                    <div class="reason-text">Omreyyy nta klch fi hyati nhari yfot mal ki mtkonch fih 😔 mais ghir mnchouf lmsj t3k nfrh denya endy thbs g3e 😍, nta howa she endy nhbek bzf 💕.</div>
+                    <div class="reason-text">Omreyyy,
+Wlh ma vie, nta klch 3ndi. Depuis que tu es dans ma vie, je suis tellement heureuse. Tu me fais sentir spéciale, importante, aimée.
+Ki nkon m3ak, je suis complète. Tu es mon bonheur, ma force, mon avenir.
+N7bek bzf wlh, plus que tout. Merci d'être l'homme parfait que tu es.
+Je t'aime pour toujours💖</div>
                 </div>
                 <div class="reason-card">
                     <div class="reason-number">2️⃣</div>
