--- a/index.html
+++ b/index.html
@@ -759,16 +759,23 @@ Je t'aime pour toujours💖</div>
         <div class="love-letter">
             <h3>Mon Amour Abdelillah,</h3>
             <p>
-                Chaque jour passé avec toi est une bénédiction. Tu es ma joie, mon bonheur, ma raison de sourire.
+                Wlh ma vie, depuis que tu es entré dans ma vie, kl chy tbdl. Avant toi, je ne savais pas ce que c'était le vrai bonheur. Mais maintenant, avec toi, chaque jour est spécial. 💕
             </p>
             <p>
-                Quand je suis avec toi, le monde devient magique. Tu transformes les moments ordinaires en souvenirs extraordinaires.
+                Nta ma source de joie, ma force, et mon espoir. Ki nkon m3ak, je me sens complète. Tu me comprends comme personne d'autre ne le fait. Tu me fais rire quand je suis triste. Tu me donnes de la force quand je suis faible. 🥰
             </p>
             <p>
-                Merci d'être l'homme merveilleux que tu es. Merci de m'aimer comme tu le fais.
+                Wlh nhbek bzf, plus que les mots ne peuvent le dire. Tu es mon présent et mon futur. N3che9 fik d'une manière que je n'ai jamais connue avant. ✨
             </p>
             <p>
-                Je t'aime plus que les mots ne pourront jamais l'exprimer. Tu es mon tout. 💖
+               Merci d'être l'homme merveilleux que tu es. Merci de m'aimer comme tu le fais. Merci d'être patient avec moi, de me supporter, et de me rendre meilleure chaque jour. 🙏
+            </p>
+            <p>
+            Je veux tout avec toi : les bons moments, les difficultés, les rires, les larmes, tout. N7eb nb9a m3ak pour toujours, jusqu'à la fin. 💍
+            </p>
+<p>
+               Reby y5lik liya wyhfdk. Tu es mon univers entier, mon cœur, ma vie. Je t'aime pour toujours et à jamais. 🤲💖
+Ana t3k pour la vie 🌟
             </p>
             <p style="margin-top: 2rem; font-size: 1.8rem; color: var(--gold);">
                 Je t'aime pour toujours et à jamais ∞
